# Tamagotchi-SDD-Codex

./: .gitignore  README.md  index.html  render.yaml
.github/workflows/: ci.yml  pages.yml
api/: README.md  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: __init__.py  router.py
api/app/api/routes/: __init__.py  pet.py
api/app/core/: __init__.py  config.py
api/app/db/: __init__.py  base.py  session.py
api/app/models/: __init__.py  pet.py
api/app/schemas/: __init__.py  pet.py
api/app/services/: __init__.py  game_engine.py
api/tests/: __init__.py  test_game_engine.py
care-actions-feedback/: feature-plan.md  requirements.md  validation.md
core-simulation-loop/: feature-plan.md  requirements.md  validation.md
docs/: index.html  validation-report.md
persistence-shell/: feature-plan.md  requirements.md  validation.md
specs/: mission.md  roadmap.md  tech-stack.md
state-progression-personality/: feature-plan.md  requirements.md  validation.md
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: tamagotchi-app.tsx
web/lib/: api.ts  types.ts
