[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-tamagotchi-api"
version = "0.1.0"
description = "FastAPI backend for the Tiny Tamagotchi MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
